add title and nav in the web

--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,24 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
-   <title>PUT YOUR NAME HERE (PUT YOUR GIHUB USERNAME HERE) | Assignment 3</title>
+   <title>Lingfeng Liu-derekliu07 | Assignment 3</title>
    <link href="css/reset.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
    <link href="css/style.css" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,Rubik:300,300i,400,400i,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
+  <h1>The Ten Principles for Good Design</h1>
+  <div id="flex-container">
+   <div class="flex-item">Innovative</div>
+   <div class="flex-item">Useful</div>
+   <div class="flex-item">Aesthetics</div>
+   <div class="flex-item">Understandable</div>
+   <div class="flex-item">Unobtruive</div>
+   <div class="flex-item">Honest</div>
+   <div class="flex-item">Long-Lasting</div>
+   <div class="flex-item">Detailed</div>
+   <div class="flex-item">Environmentally-Friendly</div>
+   <div class="flex-item">Simplicity</div>
+ </div>
 </body>
 </html>
