--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <h1>The Ten Principles for Good Design</h1>
-  <div id="flex-container">
+  <h2>DIETER RAMS</h2>
+  <nav id="navigation">
    <div class="flex-item">Innovative</div>
    <div class="flex-item">Useful</div>
    <div class="flex-item">Aesthetics</div>
@@ -21,6 +22,104 @@
    <div class="flex-item">Detailed</div>
    <div class="flex-item">Environmentally-Friendly</div>
    <div class="flex-item">Simplicity</div>
- </div>
+ </nav>
+ <div class="container">
+  <h3>1</h3>
+    <div class="section">
+      <h4>GOOD DESIGIN IS INNOTATIVE</h4></div>
+      <div class="content">
+        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+      </div>
+  </div>
+  <div class="container">
+   <h3>2</h3>
+     <div class="section">
+       <h4>GOOD DESIGIN MAKE A PRODUCT USEFUL</h4></div>
+       <div class="content">
+         <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
+       </div>
+   </div>
+   <div class="container">
+    <h3>3</h3>
+      <div class="section">
+        <h4>GOOD DESIGIN IS aesthetic</h4></div>
+        <div class="content">
+          <p>The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.</p>
+        </div>
+    </div>
+    <div class="container">
+     <h3>4</h3>
+       <div class="section">
+         <h4>GOOD DESIGIN Makes a product understandable.</h4></div>
+         <div class="content">
+           <p>It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</p>
+         </div>
+     </div>
+     <div class="container">
+      <h3>5</h3>
+        <div class="section">
+          <h4>GOOD DESIGIN Is unobtrusive.</h4></div>
+          <div class="content">
+            <p>Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.</p>
+          </div>
+      </div>
+      <div class="container">
+       <h3>6</h3>
+         <div class="section">
+           <h4>GOOD DESIGIN Is honest.</h4></div>
+           <div class="content">
+             <p>It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
+           </div>
+       </div>
+       <div class="container">
+        <h3>7</h3>
+          <div class="section">
+            <h4>GOOD DESIGIN Is long-lasting.</h4></div>
+            <div class="content">
+              <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.</p>
+            </div>
+        </div>
+        <div class="container">
+         <h3>8</h3>
+           <div class="section">
+             <h4>GOOD DESIGIN Is thorough down to the last detail.</h4></div>
+             <div class="content">
+               <p>Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.</p>
+             </div>
+         </div>
+         <div class="container">
+          <h3>9</h3>
+            <div class="section">
+              <h4>GOOD DESIGIN Is environmentally friendly.</h4></div>
+              <div class="content">
+                <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+              </div>
+          </div>
+          <div class="container">
+           <h3>9</h3>
+             <div class="section">
+               <h4>GOOD DESIGIN Is environmentally friendly.</h4></div>
+               <div class="content">
+                 <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+               </div>
+           </div>
+           <div class="container">
+            <h3>10</h3>
+              <div class="section">
+                <h4>GOOD DESIGIN Is as little design as possible.</h4></div>
+                <div class="content">
+                  <p>Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.</p>
+                </div>
+            </div>
+<footer>
+  <p>Back</p>
+  <p>prev | Next</p>
+</footer>
+
+
+
+
+
+
 </body>
 </html>
