add homepage image and title  layout

--- a/site/index.html
+++ b/site/index.html
@@ -9,8 +9,9 @@
    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,Rubik:300,300i,400,400i,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
-  <h1>The Ten Principles for Good Design</h1>
-  <h2>DIETER RAMS</h2>
+  <img src="img/IMG_1441.jpg" width="800" alt="">
+  <h1 class="background-color">THE TEN PRINCIPLES <br> FOR GOOD DESIGN</h1>
+  <h2>Dieter Rams</h2>
   <nav id="navigation">
    <div class="flex-item">Innovative</div>
    <div class="flex-item">Useful</div>
@@ -23,7 +24,7 @@
    <div class="flex-item">Environmentally-Friendly</div>
    <div class="flex-item">Simplicity</div>
  </nav>
- <div class="container">
+ <!-- <div class="container">
   <h3>1</h3>
     <div class="section">
       <h4>GOOD DESIGIN IS INNOTATIVE</h4></div>
@@ -114,12 +115,7 @@
 <footer>
   <p>Back</p>
   <p>prev | Next</p>
-</footer>
-
-
-
-
-
+</footer> -->
 
 </body>
 </html>
