--- a/site/index.html
+++ b/site/index.html
@@ -12,18 +12,32 @@
   <img src="img/IMG_1441.jpg" width="800" alt="">
   <h1 class="background-color">THE TEN PRINCIPLES <br> FOR GOOD DESIGN</h1>
   <h2>Dieter Rams</h2>
+
   <nav id="navigation">
+   <div class="flex-item">1</div>
+   <div class="flex-item">2</div>
+   <div class="flex-item">3</div>
+   <div class="flex-item">4</div>
+   <div class="flex-item">5</div><br>
+   <div class="flex-item">6</div>
+   <div class="flex-item">7</div>
+   <div class="flex-item">8</div>
+   <div class="flex-item">9</div>
+   <div class="flex-item">10</div>
+ </nav>
+
+  <!-- <nav id="navigation">
    <div class="flex-item">Innovative</div>
    <div class="flex-item">Useful</div>
    <div class="flex-item">Aesthetics</div>
    <div class="flex-item">Understandable</div>
-   <div class="flex-item">Unobtruive</div>
+   <div class="flex-item">Unobtruive</div><br>
    <div class="flex-item">Honest</div>
    <div class="flex-item">Long-Lasting</div>
    <div class="flex-item">Detailed</div>
    <div class="flex-item">Environmentally-Friendly</div>
    <div class="flex-item">Simplicity</div>
- </nav>
+ </nav> -->
  <!-- <div class="container">
   <h3>1</h3>
     <div class="section">
