--- a/site/index.html
+++ b/site/index.html
@@ -12,117 +12,87 @@
   <!-- <img src="img/IMG_1441.jpg" width="800" alt=""> -->
   <h1 class="background-color">THE TEN PRINCIPLES <br> FOR GOOD DESIGN</h1>
   <h2>Dieter Rams</h2>
-
-  <!-- <div id="navigation">
-   <div class="flex-item">1</div>
-   <div class="flex-item">2</div>
-   <div class="flex-item">3</div>
-   <div class="flex-item">4</div>
-   <div class="flex-item">5</div>
-   <div class="flex-item">6</div>
-   <div class="flex-item">7</div>
-   <div class="flex-item">8</div>
-   <div class="flex-item">9</div>
-   <div class="flex-item">10</div>
- </div> -->
-
-  <!-- <div id="navigation">
-   <div class="flex-item">Innovative</div>
-   <div class="flex-item">Useful</div>
-   <div class="flex-item">Aesthetics</div>
-   <div class="flex-item">Understandable</div>
-   <div class="flex-item">Unobtruive</div>
-   <div class="flex-item">Honest</div>
-   <div class="flex-item">Long-Lasting</div>
-   <div class="flex-item">Detailed</div>
-   <div class="flex-item">Environmentally-Friendly</div>
-   <div class="flex-item">Simplicity</div>
- </div> -->
+</body>
+ <nav>
+    <ul>
+      <li><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">4</a></li>
+      <li><a href="#">5</a></li>
+      <li><a href="#">6</a></li>
+      <li><a href="#">7</a></li>
+      <li><a href="#">8</a></li>
+      <li><a href="#">9</a></li>
+      <li><a href="#">10</a></li>
+    </ul>
+ </nav>
 
  <div id="container">
-  <div class="section">
-    <h3>1</h3>
+  <div id="section">
+  <div class="section">1</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-  </div>
-  <div class="section">
-    <h3>2</h3>
+        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.
+       </p>
+     </div>
+ <div class="section">2</div>
       <div class="content">
         <h4>GOOD DESIGIN Makes a product useful.</h4>
         <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
-      </div>
-  </div>
+     </div>
 
-  <div class="section">
-    <h3>1</h3>
+<div class="section">3</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-  </div>
-
-  <div class="section">
-    <h3>1</h3>
+     </div>
+<div class="section">4</div>
       <div class="content">
           <h4>GOOD DESIGIN IS INNOTATIVE</h4>
           <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-  </div>
+     </div>
 
-  <div class="section">
-    <h3>1</h3>
+<div class="section">5</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
       </div>
-  </div>
 
-  <div class="section">
-    <h3>1</h3>
+<div class="section">6</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
       </div>
-  </div>
 
-  <div class="section">
-    <h3>1</h3>
+<div class="section">7</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
       </div>
-  </div>
 
-  <div class="section">
-    <h3>1</h3>
+<div class="section">8</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
       </div>
-  </div>
 
-  <div class="section">
-    <h3>1</h3>
+<div class="section">9</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
       </div>
-  </div>
 
-  <div class="section">
-    <h3>10</h3>
+<div class="section">10</div>
       <div class="content">
         <h4>GOOD DESIGIN IS INNOTATIVE</h4>
         <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
       </div>
-  </div>
 
+ </div>
 </div>
 <footer>
-  <p>Back</p>
-  <p>prev | Next</p>
+  <p>Back</p> <p>prev | Next</p>
 </footer>
 </body>
 </html>
