change all info

--- a/site/index.html
+++ b/site/index.html
@@ -12,11 +12,10 @@
   <!-- <img src="img/IMG_1441.jpg" width="800" alt=""> -->
   <h1 class="background-color">THE TEN PRINCIPLES <br> FOR GOOD DESIGN</h1>
   <h2>Dieter Rams</h2>
-</body>
- <nav>
+  <nav>
     <ul>
-      <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
+      <li><a href="#section">1</a></li>
+      <li><a href="#section">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">4</a></li>
       <li><a href="#">5</a></li>
@@ -27,72 +26,15 @@
       <li><a href="#">10</a></li>
     </ul>
  </nav>
-
  <div id="container">
-  <div id="section">
-  <div class="section">1</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.
-       </p>
-     </div>
- <div class="section">2</div>
-      <div class="content">
-        <h4>GOOD DESIGIN Makes a product useful.</h4>
-        <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
-     </div>
-
-<div class="section">3</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-     </div>
-<div class="section">4</div>
-      <div class="content">
-          <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-          <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-     </div>
-
-<div class="section">5</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-
-<div class="section">6</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-
-<div class="section">7</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-
-<div class="section">8</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-
-<div class="section">9</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-
-<div class="section">10</div>
-      <div class="content">
-        <h4>GOOD DESIGIN IS INNOTATIVE</h4>
-        <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
-      </div>
-
- </div>
-</div>
-<footer>
-  <p>Back</p> <p>prev | Next</p>
-</footer>
+   <div style="position: relative;">
+     <span style="position: absolute; top: 0;">1</span>
+     <h2>GOOD DESIGIN IS INNOTATIVE</h2>
+     <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+   </div>
+  </div>
+  <footer>
+    <p>Back</p> <p>prev | Next</p>
+  </footer>
 </body>
 </html>
