--- a/site/index.html
+++ b/site/index.html
@@ -6,35 +6,49 @@
    <title>Lingfeng Liu-derekliu07 | Assignment 3</title>
    <link href="css/reset.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
    <link href="css/style.css" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,Rubik:300,300i,400,400i,700&amp;subset=latin-ext" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville,Nunito+Sans:200,300,400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
   <!-- <img src="img/IMG_1441.jpg" width="800" alt=""> -->
-  <h1 class="background-color">THE TEN PRINCIPLES <br> FOR GOOD DESIGN</h1>
+  <h1 class="background-color">The Ten Principles <br>For Good Design</h1>
   <h2>Dieter Rams</h2>
   <nav>
     <ul>
-      <li><a href="#section">1</a></li>
-      <li><a href="#section">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">4</a></li>
-      <li><a href="#">5</a></li>
-      <li><a href="#">6</a></li>
-      <li><a href="#">7</a></li>
-      <li><a href="#">8</a></li>
-      <li><a href="#">9</a></li>
-      <li><a href="#">10</a></li>
+      <li><a href="#section-1">01</a></li>
+      <li><a href="#section-2">02</a></li>
+      <li><a href="#section-3">03</a></li>
+      <li><a href="#section-4">04</a></li>
+      <li><a href="#section-5">05</a></li>
+      <li><a href="#section-6">06</a></li>
+      <li><a href="#section-7">07</a></li>
+      <li><a href="#section-8">08</a></li>
+      <li><a href="#section-9">09</a></li>
+      <li><a href="#section-10">10</a></li>
     </ul>
  </nav>
  <div id="container">
-   <div style="position: relative;">
-     <span style="position: absolute; top: 0;">1</span>
-     <h2>GOOD DESIGIN IS INNOTATIVE</h2>
+  <div id="section-1-div" style="position: relative;">
+     <span id="section-1" style="position: absolute; top: 0;">01</span>
+     <h3>GOOD DESIGIN IS INNOTATIVE</h3>
      <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
    </div>
+
+  <div id="section-2-div" style="position: relative;">
+    <span id="section-2" style="position: absolute; top: 0;">02</span>
+    <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+    <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
   </div>
-  <footer>
+
+  <div id="section-3-div" style="position: relative;">
+    <span id="section-3" style="position: absolute; top: 0;">03</span>
+    <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+    <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+  </div>
+  </div>
+
+
+  <!-- <footer>
     <p>Back</p> <p>prev | Next</p>
-  </footer>
+  </footer> -->
 </body>
 </html>
