--- a/site/index.html
+++ b/site/index.html
@@ -27,22 +27,64 @@
     </ul>
  </nav>
  <div id="container">
-  <div id="section-1-div" style="position: relative;">
+  <div class="section-1-div" style="position: relative;">
      <span id="section-1" style="position: absolute; top: 0;">01</span>
      <h3>GOOD DESIGIN IS INNOTATIVE</h3>
      <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
    </div>
 
-  <div id="section-2-div" style="position: relative;">
+  <div class="section-2-div" style="position: relative;">
     <span id="section-2" style="position: absolute; top: 0;">02</span>
     <h3>GOOD DESIGIN IS INNOTATIVE</h3>
-    <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+    <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
   </div>
 
-  <div id="section-3-div" style="position: relative;">
+  <div class="section-3-div" style="position: relative;">
     <span id="section-3" style="position: absolute; top: 0;">03</span>
     <h3>GOOD DESIGIN IS INNOTATIVE</h3>
-    <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+    <p>The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.</p>
+  </div>
+
+  <div class="section-4-div" style="position: relative;">
+    <span id="section-4" style="position: absolute; top: 0;">04</span>
+    <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+    <p>It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</p>
+  </div>
+
+  <div class="section-3-div" style="position: relative;">
+    <span id="section-5" style="position: absolute; top: 0;">05</span>
+    <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+    <p>Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.</p>
+  </div>
+
+  <div class="section-2-div" style="position: relative;">
+    <span id="section-6" style="position: absolute; top: 0;">06</span>
+    <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+    <p>It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
+  </div>
+
+  <div class="section-1-div" style="position: relative;">
+     <span id="section-7" style="position: absolute; top: 0;">07</span>
+     <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+     <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.</p>
+   </div>
+
+   <div class="section-2-div" style="position: relative;">
+     <span id="section-8" style="position: absolute; top: 0;">08</span>
+     <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+     <p>Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.</p>
+   </div>
+
+   <div class="section-3-div" style="position: relative;">
+     <span id="section-9" style="position: absolute; top: 0;">09</span>
+     <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+     <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+  </div>
+
+  <div class="section-4-div" style="position: relative;">
+    <span id="section-10" style="position: absolute; top: 0;">10</span>
+    <h3>GOOD DESIGIN IS INNOTATIVE</h3>
+    <p>Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.</p>
   </div>
   </div>
 
