add footer back

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville,Nunito+Sans:200,300,400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
-  <h1 class="background-color">The Ten Principles <br>For Good Design</h1>
+  <h1 id="header" class="background-color">The Ten Principles<br>For Good Design</h1>
   <h2>Dieter Rams</h2>
   <nav>
     <ul>
@@ -89,7 +89,7 @@
 
 
   <footer>
-    <p>Back</p> <p>prev | Next</p>
+    <h4><a href="#header">Back</a></h4>
   </footer>
 </body>
 </html>
