--- a/site/index.html
+++ b/site/index.html
@@ -46,7 +46,7 @@
 
   <div class="section-4-div" style="position: relative;">
     <span id="section-4" style="position: absolute; top: 0;">04</span>
-    <h3>GOOD DESIGIN MAKES PRODUCTS UNDERSTANDABLE.</h3>
+    <h3>GOOD DESIGIN MAKES <br>PRODUCTS UNDERSTANDABLE.</h3>
     <p>It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</p>
   </div>
 
@@ -64,7 +64,7 @@
 
   <div class="section-1-div" style="position: relative;">
      <span id="section-7" style="position: absolute; top: 0;">07</span>
-     <h3>GOOD DESIGIN IS LONG &dash LASTING.</h3>
+     <h3>GOOD DESIGIN IS LONG &mdash LASTING.</h3>
      <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.</p>
    </div>
 
@@ -82,7 +82,7 @@
 
   <div class="section-4-div" style="position: relative;">
     <span id="section-10" style="position: absolute; top: 0;">10</span>
-    <h3>GOOD DESIGIN IS AS LITTLE DESIGN AS POSSIBLE.</h3>
+    <h3>GOOD DESIGIN IS AS LITTLE DESIGN <br>AS POSSIBLE.</h3>
     <p>Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.</p>
   </div>
   </div>
