--- a/site/index.html
+++ b/site/index.html
@@ -64,7 +64,7 @@
 
   <div class="section-1-div" style="position: relative;">
      <span id="section-7" style="position: absolute; top: 0;">07</span>
-     <h3>GOOD DESIGIN IS LONG &mdash LASTING.</h3>
+     <h3>GOOD DESIGIN IS LONG &ndash; LASTING.</h3>
      <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.</p>
    </div>
 
